apps/base/windmill/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: windmill
  labels:
    app.kubernetes.io/name: windmill
    gateway.excloo.dev/private-access: "true"
    pod-security.kubernetes.io/audit: restricted
    pod-security.kubernetes.io/enforce: baseline
    pod-security.kubernetes.io/warn: restricted
