apps/base/windmill/postgresql.yaml
apiVersion: v1
kind: Service
metadata:
  name: windmill-postgresql
  namespace: windmill
  labels:
    app.kubernetes.io/component: database
    app.kubernetes.io/name: windmill
spec:
  clusterIP: None
  ports:
    - name: postgresql
      port: 5432
      protocol: TCP
      targetPort: postgresql
  selector:
    app.kubernetes.io/component: database
    app.kubernetes.io/name: windmill
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: windmill-postgresql
  namespace: windmill
  labels:
    app.kubernetes.io/component: database
    app.kubernetes.io/name: windmill
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/component: database
      app.kubernetes.io/name: windmill
  serviceName: windmill-postgresql
  template:
    metadata:
      labels:
        app.kubernetes.io/component: database
        app.kubernetes.io/name: windmill
    spec:
      automountServiceAccountToken: false
      containers:
        - name: postgresql
          image: postgres:18.6-bookworm
          imagePullPolicy: IfNotPresent
          ports:
            - name: postgresql
              containerPort: 5432
              protocol: TCP
          readinessProbe:
            exec:
              command:
                - pg_isready
                - --dbname=windmill
                - --username=windmill
            initialDelaySeconds: 5
            periodSeconds: 10
          resources:
            limits:
              memory: 2Gi
            requests:
              cpu: 100m
              memory: 256Mi
          securityContext:
            allowPrivilegeEscalation: false
            capabilities:
              drop:
                - ALL
            readOnlyRootFilesystem: true
            runAsGroup: 999
            runAsNonRoot: true
            runAsUser: 999
            seccompProfile:
              type: RuntimeDefault
          volumeMounts:
            - name: data
              mountPath: /var/lib/postgresql/data
            - name: runtime
              mountPath: /var/run/postgresql
            - name: temporary
              mountPath: /tmp
      terminationGracePeriodSeconds: 60
      volumes:
        - name: data
          persistentVolumeClaim:
            claimName: postgresql
        - name: runtime
          emptyDir: {}
        - name: temporary
          emptyDir: {}
