apps/base/windmill/network-policy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: windmill-app
  namespace: windmill
  labels:
    app.kubernetes.io/name: windmill
spec:
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: networking
          podSelector:
            matchLabels:
              app.kubernetes.io/name: traefik
      ports:
        - port: 8000
          protocol: TCP
  podSelector:
    matchLabels:
      app.kubernetes.io/name: windmill-app
  policyTypes:
    - Ingress
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: windmill-extra
  namespace: windmill
  labels:
    app.kubernetes.io/name: windmill
spec:
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: networking
          podSelector:
            matchLabels:
              app.kubernetes.io/name: traefik
      ports:
        - port: 3000
          protocol: TCP
  podSelector:
    matchLabels:
      app.kubernetes.io/name: windmill-extra
  policyTypes:
    - Ingress
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: windmill-postgresql
  namespace: windmill
  labels:
    app.kubernetes.io/name: windmill
spec:
  ingress:
    - from:
        - podSelector:
            matchExpressions:
              - key: app.kubernetes.io/name
                operator: In
                values:
                  - windmill-app
                  - windmill-workers
      ports:
        - port: 5432
          protocol: TCP
  podSelector:
    matchLabels:
      app.kubernetes.io/component: database
      app.kubernetes.io/name: windmill
  policyTypes:
    - Ingress
